--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "npm run clean && npm run build-babel",
-    "start": "npm run build && node ./build/index.js"
+    "start": "npm run build && node server.js"
   },
   "keywords": [
     "interlink",
@@ -15,6 +15,7 @@
   "author": "Denys Kompaniyets",
   "license": "MIT",
   "dependencies": {
+    "babel-preset-env": "^1.7.0",
     "cors": "^2.8.4",
     "express": "^4.16.3",
     "mongoose": "^5.2.4"
