--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
+    "server": "nodemon server.js",
     "build": "react-scripts build"
-
   },
   "keywords": [
     "interlink",
@@ -17,8 +17,10 @@
   "license": "MIT",
   "dependencies": {
     "babel-preset-env": "^1.7.0",
+    "bcrypt": "^3.0.0",
     "cors": "^2.8.4",
     "express": "^4.16.3",
+    "jsonwebtoken": "^8.3.0",
     "mongoose": "^5.2.4"
   },
   "devDependencies": {
