--- a/package.json
+++ b/package.json
@@ -18,10 +18,15 @@
   "dependencies": {
     "babel-preset-env": "^1.7.0",
     "bcrypt": "^3.0.0",
+    "body-parser": "^1.18.3",
     "cors": "^2.8.4",
     "express": "^4.16.3",
     "jsonwebtoken": "^8.3.0",
-    "mongoose": "^5.2.4"
+    "mongoose": "^5.2.4",
+    "npm": "^6.2.0",
+    "passport": "^0.4.0",
+    "passport-jwt": "^4.0.0",
+    "validator": "^10.4.0"
   },
   "devDependencies": {
     "nodemon": "^1.18.3"
